--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,12 @@ GEMINI_API_KEY="MY_GEMINI_API_KEY"
 # AI Studio automatically injects this at runtime with the Cloud Run service URL.
 # Used for self-referential links, OAuth callbacks, and API endpoints.
 APP_URL="MY_APP_URL"
+
+# GOOGLE_CLIENT_ID: Your Google Cloud OAuth 2.0 Client ID
+GOOGLE_CLIENT_ID=""
+
+# GOOGLE_CLIENT_SECRET: Your Google Cloud OAuth 2.0 Client Secret
+GOOGLE_CLIENT_SECRET=""
+
+# GOOGLE_API_KEY: Your Google Cloud API Key (for Google Picker)
+GOOGLE_API_KEY=""
